Show challenge rating percentile & bug fix - In addition to showing points of challenge rating for a game, percentile is also calculated and shown for the user to be able to more accurately deduce the meaning behind the score. - Pagination buttons are now updated (as they should) after a User clicks on a tier to travel to its details.

--- a/src/main/resources/static/css/gameDetails.css
+++ b/src/main/resources/static/css/gameDetails.css
@@ -269,6 +269,7 @@ td:has(.achievement-text-details) {
 /* Achievement Stats */
 .circular-progress {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     position: relative;
@@ -288,12 +289,15 @@ td:has(.achievement-text-details) {
     border-radius: 50%;
     background-color: var(--main-background-color);
 }
-.progress-value, #challenge-rating-points {
+.circular-progress .progress-value {
     position: relative;
     color: var(--alt-font-color);
     font-weight: bold;
     text-align: center;
     width: 90%;
+}
+#challenge-rating-percentile {
+    font-size: 0.8em;
 }
 #challenge-rating-points {
     color: rgba(239,239,239,0.8);
